--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Barabari Collective CSS Assignment-3</title>
 
     <!-- CSS Link -->
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- FontAwesome CSS CDN -->
     <link
