--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Barabari Collective CSS Assignment-3</title>
 
     <!-- CSS Link -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- FontAwesome CSS CDN -->
     <link
@@ -28,7 +28,7 @@
         <div class="nav_left_section">
           <div class="logo">
             <a href="#">
-              <img src="assets/logo.png" alt="Poly Logo" />
+              <img src="./assets/logo.png" alt="Poly Logo" />
             </a>
           </div>
           <button type="button">Early Access</button>
@@ -81,7 +81,7 @@
               <p>G</p>
               <p>O</p>
               <p>N</p>
-              <img src="assets/logo.png" alt="Poly Logo" />
+              <img src="./assets/logo.png" alt="Poly Logo" />
             </div>
           </div>
         </div>
