--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <footer class="copyright_section">
       <div class="container copyright_content_section">
         <div class="left_section">
-          <img src="/assets/small-logo.webp" alt="polygon logo" />
+          <img src="./assets/small-logo.webp" alt="polygon logo" />
           <h3>Terms of Service <span>Privacy</span></h3>
         </div>
         <div class="right_section">
